--- a/src/assets/scss/partials/menu/_menu-lite.scss
+++ b/src/assets/scss/partials/menu/_menu-lite.scss
@@ -593,7 +593,7 @@
     z-index: 1029;
     position: fixed;
     transition: all 0.3s ease-in-out;
-    box-shadow: 1px 0 20px 0 rgb(63, 77, 103);
+    //box-shadow: 1px 0 20px 0 rgb(63, 77, 103);
 
     ul {
         padding-left: 0;
@@ -1801,7 +1801,7 @@
                 > .collapse:not(.show) {
                     display: inline-flex;
                     background: #fff;
-                    box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
+                    //box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
                 }
 
                 .b-title {
@@ -2540,7 +2540,7 @@ $style-block-width: 400px;
 .pcoded-navbar.menu-light {
     background-color: $menu-light-background;
     color: $menu-light-text-color;
-    box-shadow: 7px 0 15px 0 rgba(69, 90, 100, 0.09);
+    //box-shadow: 7px 0 15px 0 rgba(69, 90, 100, 0.09);
 
     .header-logo {
         background-color: $menu-dark-background;
@@ -2645,7 +2645,7 @@ body {
     &.layout-1 {
         .pcoded-navbar.menu-light {
             .sidemenu {
-                box-shadow: inset -1px 0 0 0 rgba(169, 183, 208, 0.4);
+                //box-shadow: inset -1px 0 0 0 rgba(169, 183, 208, 0.4);
 
                 li {
                     a:after {
