--- a/src/assets/scss/partials/menu/_menu-lite.scss
+++ b/src/assets/scss/partials/menu/_menu-lite.scss
@@ -3071,7 +3071,7 @@ body {
 
                 &.navbar-#{'' + $value} {
                     .sidemenu {
-                        box-shadow: inset -1px 0 0 0 rgba(255, 255, 255, 0.3);
+                        //box-shadow: inset -1px 0 0 0 rgba(255, 255, 255, 0.3);
                         li.active:after {
                             background: #fff;
                         }
